--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
               "base": "dist/qorva-ui"
             },
             "index": "src/index.html",
+            "baseHref": "/",
             "polyfills": [
               "zone.js"
             ],
@@ -45,15 +46,29 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
-            },
-            "development": {
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "outputPath": "dist/qorva-ui",
+              "index": "src/index.html",
+              "main": "src/main.ts",
+              "polyfills": "src/polyfills.ts",
+              "tsConfig": "tsconfig.app.json",
+              "aot": true,
+              "assets": [
+                "src/favicon.ico",
+                "src/assets"
+              ],
+              "styles": [
+                "src/styles.css"
+              ],
+              "scripts": []
             }
-          },
+        },
           "defaultConfiguration": "production"
         },
         "serve": {
